wp-content/themes/giger-kms/src/sass/_utility.scss
/** == Helpers and in-page styles (_utility.scss) == */

.screen-reader-text {
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	clip: rect(1px, 1px, 1px, 1px);
	border: 0 none;
	padding: 0;
}

img.wp-smiley {
	margin-bottom: 0; //reset
	margin-top: 0; //teset
	padding: 0; //reset
	border: none;
}


/* text alignment */
.text-left   {
	text-align: left; }

.text-right  {
	text-align: right; }

.text-center {
	text-align: center; }


/* utilities */
.clear {
	clear: both; }

.cf {
	@include clearfix; }

.ir {
	@include image-replace; }

.hidden {
	@include hidden; }

.visuallyhidden {
	@include visuallyhidden; }

.invisible { //Hide visually and from screenreaders, but maintain layout
	visibility: hidden; }

.break {
	word-break: break-word;
	word-wrap: break-word; }


/* selections */
a:link {
	-webkit-tap-highlight-color: $color-link-two;
	-webkit-tap-highlight-color : $color-link-two; } /*  highloght color for Safari iOS */

::-webkit-selection {
	background : $color-link-two;
	color : $color-white;
	text-shadow : none; }

::-moz-selection {
	background : $color-link-two;
	color : $color-white;
	text-shadow : none; }

::selection {
	background : $color-link-two;
	color : $color-white;
	text-shadow : none; }



/** == Post content elements == **/
@mixin link-in-content {
	
}


@mixin the-content {

	a { @include link-in-content(); }

	//headings
	h2, h3, h4, h5, h6 {
		margin: $inpage-margin-base * 1.5 0 $inpage-margin-base;

		&:first-child { margin-top: 0; }
		&:last-child { margin-bottom: 0; }

		color: $color-text-black;
		strong, b { font-weight: normal; }
	}

	h2, h3 {
		@include post-title(featured);
		color: $color-text-black;
	}

	h4 {
		@include post-title(inlist);
		color: $color-text-black;
	}

	h5 {
		@include body-text(default);
		text-transform: uppercase;
	}

	h6 {
		font-weight: bold;
	}



	h2 + h3, h2 + h4, h2 + h5, h2 + h6,
	h3 + h4, h3 + h5, h3 + h6,
	h4 + h5, h4 + h6,
	h5 + h6 {
		margin-top: $inpage-margin-base / 2;
	}

	//texts
	p, iframe, blockquote {
		margin-bottom: $inpage-margin-base;
		&:last-child { margin-bottom: 0; }
	}

	figure {
		margin: $inpage-margin-base*2 0;
		&:last-child { margin-bottom: 0; }
		&:first-child { margin-top: 0; }
	}

	figure + figure,
	h3 + figure,
	h4 + figure,
	h5 + figure,
	h6 + figure {
		margin-top: $inpage-margin-base;
	}


	// Lists
	ul {
		margin: $inpage-margin-base 0 $inpage-margin-base 1.5em;

		li {
			position: relative;
			padding-left: 20px;

			&:before {
				content: '–';
				color: #000;
				display: inline-block;
				line-height: inherit;
				position: absolute;
				left: 0;
				top: 0;
			}

			li {
				padding-left: 0;
				break-inside: avoid;
				&:before { display: none; }
			}
		}

		&:first-child {	margin-top: 0;	}
	}

	ul ul { list-style: circle; }
	ul ul ul { list-style: square; }

	ol {
	   list-style: decimal;
	   margin: $inpage-margin-base 0 $inpage-margin-base 1.5em;
	   &:first-child {	margin-top: 0;	}
	}

	ol ol { list-style: lower-alpha; }
	ol ol ol { list-style: lower-roman; }

	ul ul,
	ul ol,
	ol ul,
	ol ol {
	   margin-bottom: 0;
	}

	li {
		margin-bottom: $inpage-margin-base;
		&:last-child { margin-bottom: 0; }
	}

	ul + p,
	ol + p { margin-top:  $inpage-margin-base }


	//in text shortcodes
	
	

	//image caption
	.wp-caption {
		max-width: 100%;
	}

	.wp-caption-text {
		//@include figcaption-single();
	}

	//block of summary stiled text in main content
	.summary-like {
		@include body-text();
		line-height: 1.65;
	}

	//image in text
	.alignleft.size-thumbnail {
		display: block;
		margin-bottom: $inpage-margin-base;

		@include for(small-screens) {
			float: left;
			margin-right: 30px;
			margin-bottom: 10px;
		}
	}

	img.alignleft,
	img[align ="left"] {
		display: block;
		margin-bottom: $inpage-margin-base;

		@include for(small-screens) {
			float: left;
			margin-right: 30px;
			margin-bottom: 10px;
			max-width: 30%;
			height: auto;
		}
	}

	//blockquote
	blockquote {
		border-left: 5px solid $green;
		// margin: 30px 0 30px 45px;
		margin: $inpage-baseline 0 $inpage-baseline $inpage-baseline*1.5;
		padding-left: $inpage-margin-base;
		font-style: italic;
		color: $color-text-light;

	}
	
}

/* loader */
.load-more {
    text-align:center;
    padding: 10px 0px 15px 0px;
    
    .loader {
        display:none;
        color: $color-link-two;
    }
    
	.load-more-btn {
	    display:inline;
	}
    
    &.loading {
        .loader {
            display:block;
        }
        
        .load-more-btn {
            display:none;
        }
    }
}

